--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -3,7 +3,7 @@
 
 /*Whole/All page*/
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; /**/
   color: #18191A;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 17px;
@@ -13,64 +13,64 @@
 
 /*Centre aspects in div's with the class centre*/
 .centre {
-  left:50%;
+  left: 50%;
   margin: 0;
-  position: absolute;
+  position: absolute; /*positions the div to the closest positioned ancestor*/
   top: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%)
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); /*moves the elements in the centre div to given position*/
 }
 
 /*Around buttons*/
 .container { 
   height: 3rem;
-  position: relative;
+  position: relative; /**/
 }
 
 /*Buttons*/
 .buttons {
-  background-color: #FEFEFE;
-  border: 0.5px solid #18191A;
-  border-radius: 0.8rem;
-  cursor: pointer;
-  display: inline-block;
+  background-color: rgb(254, 254, 254);
+  border: 0.5px solid rgb(24, 25, 26);
+  border-radius: 0.8rem; /*radius of divs corners*/
+  cursor: pointer; /**/
+  display: inline-block; /**/
   font-family: 'Lucida Sans', sans-serif;
   padding: 0.625rem;
   text-align: center;
-  transition: all 0.2s ease-out;
-  user-select: none;
+  transition: all 0.2s ease-out; /*transition will effect all .buttons properities, will take 0.2s and have a slow end*/
+  -ms-user-select: none;
+  -webkit-transition: all 0.2s ease-out;
+  -webkit-user-select: none;
+  user-select: none; /*prevents the div from being highlighted*/
 }
 
 /*Buttons - when hovered*/
 .buttons:hover {
-  background: #ADBABD;
-  transform: scale(1.2);
+  background: rgb(173, 186, 189);
   -ms-transform: scale(1.2);
   -webkit-transform: scale(1.2);
+  transform: scale(1.2); /*increases the scale of button*/
 }
-
-/*HOME PAGE*/
 
 /*Header image - smaller screens*/
 .image {
-  filter: blur(0.0625rem);
   -webkit-filter: blur(0.0625rem);
+  filter: blur(0.0625rem); /*blurs the image*/
 }
 
 /*Header image - larger screens*/
 .image2{
-  display: none;
-  filter: blur(0.0635rem);
+  display: none; /*the div is not shown*/
   -webkit-filter: blur(0.0635rem);
+  filter: blur(0.0635rem);
 }
 
 /*Navigation bar*/
 nav {
-  background-color: #18191A4D;
-  color: #FEFEFE;
+  background-color: rgba(24, 25, 26, 0.3); /*0.3 = opacity*/
+  color: rgb(254, 254, 254);
   height: 2.4rem;
-  overflow: hidden;
+  overflow: hidden; /*doesn't display content that overflows the div*/
   position: absolute;
   top: 0;
   width: 100%;
@@ -78,7 +78,7 @@ nav {
 
 /*Navigation bar - text*/
 .navText {
-  color: #FEFEFE;
+  color: rgb(254, 254, 254);
   font-family: 'Lucida Sans', sans-serif;
   font-size: 0.83rem;
   position: absolute;
@@ -88,11 +88,11 @@ nav {
 
 /*Navigation bar - links*/
 nav a {
-  color: #FEFEFE;
+  color: rgb(254, 254, 254);
   float: right;
   font-size: 0.9rem;
   padding: 0.6rem 0.6rem 0.5rem 0.6rem;
-  text-decoration: none;
+  text-decoration: none; /*gets rid of underline on the link*/
   top: 0;
 }
 
@@ -101,7 +101,7 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 
 /*Header - text on image*/
 .headerText {
-  color: #F3F3F3;
+  color: rgb(243, 243, 243);
   font-family: 'Lucida Sans', sans-serif;
   font-size: 2rem;
   margin: auto;
@@ -111,22 +111,27 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
   width: 100%;
 }
 
+/*Padding around everything except header*/
+.padding {padding: 2rem 1rem 1rem 1rem;}
+
+/*HOME PAGE*/
+
 /*Popup - black background*/
 .popup {
   background: rgba(24, 25, 26, 0.6);
   display: none;
   height: 100%;
   left: 0;
-  position: fixed;
+  position: fixed; /*fixes the div in place therefore it won't move even on scroll*/
   top: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 3; /*the stack order*/
 }
 
 /*Popup - white background*/
 .popupContent {
-  background: #FEFEFE;
-  opacity: 1;
+  background: rgb(254, 254, 254);
+  /*opacity: 1;*/
   width: 100%;
   z-index: 4;
 }
@@ -147,9 +152,6 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 /*Description*/
 .description {padding: 1rem 1rem 1rem 1.5rem;}
 
-/*Padding around everything except header*/
-.padding {padding: 2rem 1rem 1rem 1rem;}
-
 /*Headers at each section*/
 .title {
   font-family: 'Lucida Sans', sans-serif;
@@ -166,13 +168,13 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 
 /*Apps - box(image/text)*/
 .app {
-  border: 0.0625rem solid #ADBABD;
+  border: 0.0625rem solid rgb(173, 186, 189);
   margin: 0 auto;
   overflow: hidden;
 }
 
 /*Apps - box(image/text) when hovered*/
-.app:hover {border: 0.0625rem solid #18191A;}
+.app:hover {border: 0.0625rem solid rgb(24, 25, 26);}
 
 /*Apps - image*/
 .app img {
@@ -184,16 +186,27 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 
 /*Apps - image when hovered*/
 .app img:hover {
-  transform: scale(1.3);
   -ms-transform: scale(1.3);
   -webkit-transform:scale(1.3);
+  transform: scale(1.3);
   }
 
 /*Apps - text*/
-.appName {
-  background-color: #FEFEFE;
-  color: #18191A;
+.appName, .appNameDisplayed {
+  background-color: rgb(254, 254, 254);
+  color: rgb(24, 25, 26);
   padding: 0.9375rem;
+  position: relative;
+  text-align: center;
+  z-index: 1;
+}
+
+.appNameHidden {
+  background-color: rgb(254, 254, 254);
+  color: rgb(24, 25, 26);
+  display: none;
+  font-size: 0.75rem;
+  padding: 0.2375rem;
   position: relative;
   text-align: center;
   z-index: 1;
@@ -201,13 +214,13 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 
 /*Help button - bottom right*/
 .helpButton {
-  background: #1A1739;
+  background: rgb(26, 23, 57);
   border-radius: 50%;
   bottom: 0.9rem;
   color: #FEFEFE;
   font-size: 2rem;
   height: 3.2rem;
-  line-height: 3.2rem;
+  line-height: 3.2rem; /**/
   opacity: 0.65;
   position: fixed;
   right: 0.9rem;
@@ -221,9 +234,9 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 /*Help button when hovered*/
 .helpButton:hover {
   opacity: 1;
-  transform: scale(1.2);
   -ms-transform: scale(1.2);
   -webkit-transform: sclae(1.2);
+  transform: scale(1.2);
 }
 
 /*HELP PAGE*/
@@ -240,7 +253,7 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 
 /*How to use a button - example*/
 #examplePopup {
-  background-color: #18191A;
+  background-color: rgb(24, 25, 26);
   border-radius: 2px;
   bottom: 30px;
   color: #FFF;
@@ -257,9 +270,9 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 
 /*Displays the popup*/
 #examplePopup.show {
+  -webkit-animation: fadein 0.5s, fadeout 1.0s 1.5s;
   animation: fadein 0.5s, fadeout 1.0s 1.5s;
   visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 1.0s 1.5s;
 }
 
 /*Popup - fades in after button clicked*/
@@ -293,9 +306,13 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
   .aroundApp {
     padding-bottom: 0.3125rem;
     width: 49.9999%;
-    
   }
-  .appName{font-size: 0.75rem;}
+  .appName {
+    font-size: 0.75rem;
+    padding: 0.2375rem;
+  }
+  .appNameDisplayed {display: none;}
+  .appNameHidden {display: block;}
 }
 
 /*When the screen is at least 650px wide*/
