--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -73,6 +73,7 @@ nav {
   overflow: hidden; /*doesn't display content that overflows the div*/
   position: absolute;
   top: 0;
+  user-select: none;
   width: 100%;
 }
 
@@ -227,6 +228,7 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
   text-align: center;
   text-decoration: none;
   transition: 0.3s all ease-in-out;
+  user-select: none;
   width: 3.2rem;
   z-index: 2;
 }
@@ -297,50 +299,4 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 @-webkit-keyframes fadeout {
   from {bottom: 30px; opacity: 1;} 
   to {bottom: 0; opacity: 0;}
-}
-
-/*SCREEN SIZE CHANGES*/
-
-/*When the screen is at most 500px wide*/
-@media only screen and (max-width: 500px) {
-  .aroundApp {
-    padding-bottom: 0.3125rem;
-    width: 49.9999%;
-  }
-  .appName {
-    font-size: 0.75rem;
-    padding: 0.2375rem;
-  }
-  .appNameDisplayed {display: none;}
-  .appNameHidden {display: block;}
-}
-
-/*When the screen is at least 650px wide*/
-@media screen and (min-width: 650px) {
-  .padding {padding: 1.5rem 3rem 1rem 3rem;}
-}
-
-/*When the screen is at least 700px wide*/
-@media only screen and (max-width: 700px) {
-  .aroundApp {
-    margin: 0.375rem 0;
-    padding-bottom: 0.4375rem;
-    width: 33%;
-  }
-}
-
-/*When the screen is at most 900px wide*/
-@media screen and (min-width: 900px) {
-  .image2 {display: block;}
-  .image {display: none;}
-  .padding {padding: 2.5rem 5rem 1rem 5rem;}
-}
-
-/*When the screen is at least 1200px wide*/
-@media screen and (min-width: 1200px) {
-  * {font-size: 20px;}
-  .padding {padding: 2rem 7rem 1rem 7rem;}
-  .description {
-    text-align: center;
-    }
 }
