--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,4 +1,4 @@
-/*Padding: Top Right Bottom Left*/
+/*Padding: Top Right Bottom Left Padding: Top Right&Left Bottom Padding: Top&Bottom Right&Left*/
 /*font-family: 'Lucida Sans', sans-serif;*/
 
 /*Whole/All page*/
