--- a/stylesheet/apps.css
+++ b/stylesheet/apps.css
@@ -15,6 +15,12 @@
   text-align: center;
 }
 
+/*Padding next to Image Map header*/
+.imageMapHeader {
+  font-size: 23px;
+  padding-left: 1rem;
+}
+
 /*Padding around image map*/
 .imageMap, .imageMapFailed {
   padding: 1rem;
@@ -70,7 +76,7 @@
 }
 
 /*Divs that aren't displayed when the page first loads*/
-.areaDescription, .imageMapFailed, #profileOne, #profileTwo, #profileThree {
+.areaDescription, .imageMapFailed, .profile {
   display: none;
 }
 
@@ -103,14 +109,13 @@
   background-color: rgb(255, 255, 255);
   border: none;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-  color: rgb(255, 255, 255);
   cursor: pointer;
-  font-size: 15px;
+  font-size: 22px;
+  font-weight: bold;
   letter-spacing: 0.6px;
   margin: 0.25rem 0;
   outline: none;
   padding: 1rem;
-  text-align: left;
   text-decoration: none;
   transition: 0.5s;
   width: 100%;
