--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -3,41 +3,40 @@
 
 /*Whole/All page*/
 * {
-  box-sizing: border-box; /**/
-  color: #18191A;
+  box-sizing: border-box; /*Accounts for any border/padding in elements*/
+  color: rgb(24, 25, 26);
   font-family: Helvetica, Arial, sans-serif;
   font-size: 17px;
-  margin: 0;
-  padding: 0;
+  margin: 0; /*Sets margins to 0*/
+  padding: 0; /*Sets padding to 0*/
 }
 
 /*Centre aspects in div's with the class centre*/
 .centre {
-  left: 50%;
-  margin: 0;
+  left: 50%; /*Distance from the left edge*/
   position: absolute; /*positions the div to the closest positioned ancestor*/
-  top: 50%;
+  top: 50%; /*Distance from top edge*/
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); /*moves the elements in the centre div to given position*/
 }
 
 /*Around buttons*/
 .container { 
-  height: 3rem;
-  position: relative; /**/
+  height: 3rem; /*Height of the container*/
+  position: relative; /*Positioned relative to it's normal position*/
 }
 
 /*Buttons*/
-.buttons {
+.buttons, .clickedButton {
   background-color: rgb(254, 254, 254);
   border: 0.5px solid rgb(24, 25, 26);
   border-radius: 0.8rem; /*radius of divs corners*/
-  cursor: pointer; /**/
-  display: inline-block; /**/
+  cursor: pointer; /*Chnages the mouse shape when the it hovers the element*/
+  display: inline-block; /*Set inline with the natural flow of the text*/
   font-family: 'Lucida Sans', sans-serif;
   padding: 0.625rem;
   text-align: center;
-  text-decoration: none;
+  text-decoration: none; /*Gets rid of the underline on the 'a' attribute*/
   transition: all 0.2s ease-out; /*transition will effect all .buttons properities, will take 0.2s and have a slow end*/
   -ms-user-select: none;
   -webkit-transition: all 0.2s ease-out;
@@ -46,7 +45,7 @@
 }
 
 /*Buttons - when hovered*/
-.buttons:hover {
+.buttons:hover, .clickedButton:hover {
   background: rgb(173, 186, 189);
   -ms-transform: scale(1.2);
   -webkit-transform: scale(1.2);
@@ -72,9 +71,9 @@ nav {
   color: rgb(254, 254, 254);
   height: 2.4rem;
   overflow: hidden; /*doesn't display content that overflows the div*/
-  position: absolute;
+  position: absolute; /*Positioned to it's nearest positionest element*/
   top: 0;
-  user-select: none;
+  user-select: none; /*If the text is copied this element is not included*/
   width: 100%;
 }
 
@@ -85,13 +84,13 @@ nav {
   font-size: 0.83rem;
   position: absolute;
   padding: 0.6rem;
-  text-align: left; 
+  text-align: left; /*Text aligns to the left*/
 }
 
 /*Navigation bar - links*/
 nav a {
   color: rgb(254, 254, 254);
-  float: right;
+  float: right; /*Elements are positioned to the right*/
   font-size: 0.9rem;
   padding: 0.6rem 0.6rem 0.5rem 0.6rem;
   text-decoration: none; /*gets rid of underline on the link*/
@@ -99,7 +98,7 @@ nav a {
 }
 
 /*Navigation bar - links when hovered*/
-nav a:hover {border-bottom: 0.25rem solid #1A1739;}
+nav a:hover {border-bottom: 0.25rem solid rgb(26, 23, 57);}
 
 /*Header - text on image*/
 .headerText {
@@ -128,7 +127,7 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 /*Popup - black background*/
 .popup {
   background: rgba(24, 25, 26, 0.6);
-  display: none;
+  display: none; /*The element is not shown, this is used with the javascript*/
   height: 100%;
   left: 0;
   position: fixed; /*fixes the div in place therefore it won't move even on scroll*/
@@ -159,7 +158,10 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 }
 
 /*Description*/
-.description {padding: 1rem 1rem 1rem 1.5rem;}
+.description {
+  padding: 1rem 1rem 1rem 1.5rem;
+  text-align: center;
+  }
 
 /*Headers at each section*/
 .title {
@@ -168,7 +170,7 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 }
 
 /*Apps - around the image*/
-.aroundApp {
+.aroundFunction {
   float: left;
   padding: 0 0.375rem;
   padding-bottom: 0.625rem;
@@ -176,17 +178,17 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 }
 
 /*Apps - box(image/text)*/
-.app {
+.function {
   border: 0.0625rem solid rgb(173, 186, 189);
   margin: 0 auto;
   overflow: hidden;
 }
 
 /*Apps - box(image/text) when hovered*/
-.app:hover {border: 0.0625rem solid rgb(24, 25, 26);}
+.function:hover {border: 0.0625rem solid rgb(24, 25, 26);}
 
 /*Apps - image*/
-.app img {
+.function img {
   height: auto;
   transition: 0.5s all ease-in-out;
   width: 100%;
@@ -194,7 +196,7 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 }
 
 /*Apps - image when hovered*/
-.app img:hover {
+.function img:hover {
   -ms-transform: scale(1.3);
   -webkit-transform:scale(1.3);
   transform: scale(1.3);
@@ -226,10 +228,10 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
   background: rgb(26, 23, 57);
   border-radius: 50%;
   bottom: 0.9rem;
-  color: #FEFEFE;
+  color: rgb(254, 254, 254);
   font-size: 2rem;
   height: 3.2rem;
-  line-height: 3.2rem; /**/
+  line-height: 3.2rem; /*Height of the line*/
   opacity: 0.65;
   position: fixed;
   right: 0.9rem;
@@ -238,15 +240,104 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
   transition: 0.3s all ease-in-out;
   user-select: none;
   width: 3.2rem;
-  z-index: 2;
+  z-index: 2; /*How the elements layer*/
 }
 
 /*Help button when hovered*/
 .helpButton:hover {
-  opacity: 1;
+  opacity: 1; /*Changes opacity thing to 1*/
   -ms-transform: scale(1.2);
   -webkit-transform: sclae(1.2);
-  transform: scale(1.2);
+  transform: scale(1.2); /*changes the size by 1.2*/
+}
+
+/*Container around the search icon and search box*/
+.searchContainer {
+  border: 1px solid rgb(24, 25, 26);
+  border-radius: 5px;
+  display: inline-flex;
+  margin: 0 10%;
+  overflow: hidden;
+  position: relative;
+  width: 80%;
+}
+
+/*Icon in search bar*/
+.searchIcon {
+  padding: 0.75rem;
+}
+
+/*Typing part in search bar*/
+#mySearch {
+  border: none;
+  padding: 0.75rem 0.75rem 0.75rem 0;
+  outline: none;
+}
+
+/*Pre-installed apps icon*/
+.searchImage {
+  cursor: pointer;
+  border-radius: 2rem;
+  height: 7rem;
+  margin: 1rem;
+  width: 7rem;
+}
+
+/*Pre-installed app information section*/
+.piApps {
+  align-items: center;
+  display: inline-flex;
+  height:100%;
+  justify-content: center; /*Positioned in the centre of the div*/
+  min-width: 100px;
+  vertical-align: top;
+}
+
+/*Centres the app icon bar*/
+.centreApps {
+  height: 10rem;
+  margin: 0 5%;
+  overflow: hidden;
+  overflow-x: auto; /*Same as the overflow but on the x axis*/
+  overflow-y: hidden; /*Same as the overflow but on the y axis*/
+  white-space: nowrap; /*Text continues in a single line untill <br> appears*/
+  width: 90%;
+}
+
+/*Description of the pre-installed apps*/
+.piAppDescription {
+  display:none;
+}
+
+/*Box around description*/
+.piBox {
+ width: 100%;
+ margin: 2rem 0;
+ padding: 1rem;
+ border: 1px solid rgb(24, 25, 26);
+ border-radius: 5px;
+}
+
+/*Header of the pre-installed apps*/
+.piAppDescription h3 {
+  font-family: 'lucida Sans', sans-serif;
+  font-size: 1.3rem;
+}
+
+
+/*Place holder text in description box*/
+#placeHolder {
+  color: rgb(128, 128, 128);
+}
+
+/*Add margin the the text in the description box*/
+.piAppDescription p {
+  margin-top: 0.5rem;
+}
+
+/*Adds margin to the list in the description box*/
+.piAppDescription ul {
+  margin: 0.4rem 0 0 2rem;
 }
 
 /*HELP PAGE*/
@@ -264,25 +355,25 @@ nav a:hover {border-bottom: 0.25rem solid #1A1739;}
 /*How to use a button - example*/
 #examplePopup {
   background-color: rgb(24, 25, 26);
-  border-radius: 2px;
+  border-radius: 2px; /*Radius of the border*/
   bottom: 30px;
-  color: #FFF;
+  color: rgb(255, 255, 255);
   font-size: 17px;
   left: 50%;
   margin-left: -125px;
-  min-width: 250px;
+  min-width: 250px; /*When the screen shrinks the smallest the div goes is 250px*/
   padding: 16px;
   position: fixed;
   text-align: center;
-  visibility: hidden;
+  visibility: hidden; /*An opposed to display:none the div is still there just not seen by the user*/
   z-index: 1;
 }
 
 /*Displays the popup*/
 #examplePopup.show {
   -webkit-animation: fadein 0.5s, fadeout 1.0s 1.5s;
-  animation: fadein 0.5s, fadeout 1.0s 1.5s;
-  visibility: visible;
+  animation: fadein 0.5s, fadeout 1.0s 1.5s; /*Div takes 0.5s to fade in and 1.0s to fade out*/
+  visibility: visible; /*The div is visible*/
 }
 
 /*Popup - fades in after button clicked*/
